# CCC

./: README.md  meson.build
include/: ast.h  codegen.h  error.h  lexer.h  parser.h  semantic.h  token.h  utils.h
src/: ast.cpp  codegen.cpp  error.cpp  lexer.cpp  main.cpp  parser.cpp  semantic.cpp  token.cpp  utils.cpp
